# aocl-libmem

./: BUILD_RUN.md  CMakeLists.txt  COPYRIGHT.txt  LICENSE.txt  NOTICES  README.md
src/: CMakeLists.txt  cache_info.c  cpu_features.c  env_parser.c  libmem.c  libmem_dispatcher.c  libmem_iface.c  libmem_ifunc_dispatcher.c  logger.c  threshold.c
src/base_impls/: load_compare_erms_impls.h  load_compare_impls.h  load_store_avx2_impls.h  load_store_avx512_impls.h  load_store_erms_impls.h  load_store_impls.h  load_store_sse2_impls.h  memset_erms_impls.h
src/isa/: CMakeLists.txt
src/isa/avx2/: memchr_avx2.c  memcmp_avx2.c  memcpy_avx2.c  memmove_avx2.c  mempcpy_avx2.c  memset_avx2.c  strcat_avx2.c  strchr_avx2.c  strcmp_avx2.c  strcpy_avx2.c  strlen_avx2.c  strncat_avx2.c  strncmp_avx2.c  strncpy_avx2.c  strnlen_avx2.c  strspn_avx2.c  strstr_avx2.c
src/isa/avx2/optimized/: memchr_avx2.c  memcmp_avx2.c  memcpy_avx2.c  memmove_avx2.c  mempcpy_avx2.c  memset_avx2.c  strcat_avx2.c  strchr_avx2.c  strcmp_avx2.c  strcpy_avx2.c  strlen_avx2.c  strncat_avx2.c  strncmp_avx2.c  strncpy_avx2.c  strspn_avx2.c  strstr_avx2.c
src/isa/avx512/: memchr_avx512.c  memcmp_avx512.c  memcpy_avx512.c  memmove_avx512.c  mempcpy_avx512.c  memset_avx512.c  strcat_avx512.c  strchr_avx512.c  strcmp_avx512.c  strcpy_avx512.c  strlen_avx512.c  strncat_avx512.c  strncmp_avx512.c  strncpy_avx512.c  strnlen_avx512.c  strspn_avx512.c  strstr_avx512.c
src/isa/avx512/optimized/: memchr_avx512.c  memcmp_avx512.c  memcpy_avx512.c  memcpy_avx512_erms.c  memcpy_impl_avx512.c  memmove_avx512.c  memmove_avx512_erms.c  mempcpy_avx512.c  mempcpy_avx512_erms.c  memset_avx512.c  memset_avx512_erms.c  strcat_avx512.c  strchr_avx512.c  strcmp_avx512.c  strcpy_avx512.c  strlen_avx512.c  strncat_avx512.c  strncmp_avx512.c  strncpy_avx512.c  strspn_avx512.c  strstr_avx512.c
src/memchr/: CMakeLists.txt  amd_memchr.c
src/memcmp/: CMakeLists.txt  amd_memcmp.c  memcmp_avx2.c  memcmp_avx512.c  memcmp_erms.c  memcmp_march.c  memcmp_system.c  memcmp_threshold.c
src/memcpy/: CMakeLists.txt  amd_memcpy.c  memcpy_avx2.c  memcpy_avx512.c  memcpy_erms.c  memcpy_march.c  memcpy_system.c  memcpy_threshold.c
src/memmove/: CMakeLists.txt  amd_memmove.c  memmove_avx2.c  memmove_avx512.c  memmove_erms.c  memmove_march.c  memmove_system.c  memmove_threshold.c
src/mempcpy/: CMakeLists.txt  amd_mempcpy.c  mempcpy_avx2.c  mempcpy_avx512.c  mempcpy_erms.c  mempcpy_march.c  mempcpy_system.c  mempcpy_threshold.c
src/memset/: CMakeLists.txt  amd_memset.c  memset_avx2.c  memset_avx512.c  memset_erms.c  memset_march.c  memset_system.c  memset_threshold.c
src/strcat/: CMakeLists.txt  amd_strcat.c
src/strcmp/: CMakeLists.txt  amd_strcmp.c
src/strcpy/: CMakeLists.txt  amd_strcpy.c
src/strlen/: CMakeLists.txt  amd_strlen.c
src/strncmp/: CMakeLists.txt  amd_strncmp.c
src/strncpy/: CMakeLists.txt  amd_strncpy.c
src/strstr/: CMakeLists.txt  amd_strstr.c
src/system/: CMakeLists.txt  memchr_system.c  memcmp_system.c  memcpy_system.c  memmove_system.c  mempcpy_system.c  memset_system.c  strcat_system.c  strchr_system.c  strcmp_system.c  strcpy_system.c  strlen_system.c  strncat_system.c  strncmp_system.c  strncpy_system.c  strnlen_system.c  strspn_system.c  strstr_system.c
src/tunable/: CMakeLists.txt
src/tunable/avx2/: memcmp_avx2.c  memcpy_avx2.c  memmove_avx2.c  mempcpy_avx2.c  memset_avx2.c
src/tunable/avx512/: memcmp_avx512.c  memcpy_avx512.c  memmove_avx512.c  mempcpy_avx512.c  memset_avx512.c
src/tunable/erms/: memcmp_erms.c  memcpy_erms.c  memmove_erms.c  mempcpy_erms.c  memset_erms.c
src/tunable/threshold/: memcmp_threshold.c  memcpy_threshold.c  memmove_threshold.c  mempcpy_threshold.c  memset_threshold.c
src/uarch/: CMakeLists.txt
src/uarch/zen1/: memchr_zen1.c  memcmp_zen1.c  memcpy_zen1.c  memmove_zen1.c  mempcpy_zen1.c  memset_zen1.c  strcat_zen1.c  strchr_zen1.c  strcmp_zen1.c  strcpy_zen1.c  strlen_zen1.c  strncat_zen1.c  strncmp_zen1.c  strncpy_zen1.c  strnlen_zen1.c  strspn_zen1.c  strstr_zen1.c
src/uarch/zen2/: memchr_zen2.c  memcmp_zen2.c  memcpy_zen2.c  memmove_zen2.c  mempcpy_zen2.c  memset_zen2.c  strcat_zen2.c  strchr_zen2.c  strcmp_zen2.c  strcpy_zen2.c  strlen_zen2.c  strncat_zen2.c  strncmp_zen2.c  strncpy_zen2.c  strnlen_zen2.c  strspn_zen2.c  strstr_zen2.c
src/uarch/zen3/: memchr_zen3.c  memcmp_zen3.c  memcpy_zen3.c  memmove_zen3.c  mempcpy_zen3.c  memset_zen3.c  strcat_zen3.c  strchr_zen3.c  strcmp_zen3.c  strcpy_zen3.c  strlen_zen3.c  strncat_zen3.c  strncmp_zen3.c  strncpy_zen3.c  strnlen_zen3.c  strspn_zen3.c  strstr_zen3.c
src/uarch/zen4/: memchr_zen4.c  memcmp_zen4.c  memcpy_impl_zen4.c  memcpy_zen4.c  memmove_zen4.c  mempcpy_zen4.c  memset_zen4.c  strcat_zen4.c  strchr_zen4.c  strcmp_zen4.c  strcpy_zen4.c  strlen_zen4.c  strncat_zen4.c  strncmp_zen4.c  strncpy_zen4.c  strnlen_zen4.c  strspn_zen4.c  strstr_zen4.c
src/uarch/zen5/: memchr_zen5.c  memcmp_zen5.c  memcpy_zen5.c  memmove_zen5.c  mempcpy_zen5.c  memset_zen5.c  strcat_zen5.c  strchr_zen5.c  strcmp_zen5.c  strcpy_zen5.c  strlen_zen5.c  strncat_zen5.c  strncmp_zen5.c  strncpy_zen5.c  strnlen_zen5.c  strspn_zen5.c  strstr_zen5.c
test/: CMakeLists.txt  histogram.py  test_libmem.py
test/memcmp/: CMakeLists.txt  test_memcmp.c
test/memcpy/: CMakeLists.txt  test_memcpy.c
test/memmove/: CMakeLists.txt  test_memmove.c
test/mempcpy/: CMakeLists.txt  test_mempcpy.c
test/memset/: CMakeLists.txt  test_memset.c
tools/graph_generator/: CMakeLists.txt  graph_generator.py  linechart.py
tools/validator/: CMakeLists.txt  Validator_tool.md  libmem_validator.c  validator.py
tools/validator/glibc/: README.md  glibc_validator.sh
tools/validator/include/adapters/: GTestRunner.hpp
tools/validator/include/config/: Constants.hpp
tools/validator/include/core/: FunctionTest.hpp  FunctionValidator.hpp  PageCrossBuffer.hpp  PageCrossTestBase.hpp
tools/validator/include/traits/: FunctionTraits.hpp  MemoryTraits.hpp  StringTraits.hpp
tools/validator/include/validators/: AllValidators.hpp
tools/validator/src/: main.cpp
(+70 files in other folders)
